# eks-httpserver

./: README.md
client/: client.py  (+1 more)
server/: .gitignore  CMakeLists.txt  httpServer.cpp  httpServer.h  main.cpp  server.cpp  server.h
server/code/: HttpWorkerRunnables.cpp  httpCommandProcessor.cpp  httpCommandProcessor.h  httpServer.cpp  httpServer.h  httpThings.cpp  httpThings.h  httpWorkerRunnables.h  server.cpp  server.h  serverRunnable.cpp  serverRunnable.h
server/code/connection/: functions.cpp  functions.h  socket.h  socketUnix.h  types.h
server/code/ftp_over_http/: ftpCommandProcessor.cpp  ftpCommandProcessor.h
server/code/socket/: socket.h  socketFunctions.cpp  socketFunctions.h  socketTypes.cpp  socketTypes.h
server/code/thread_things/: queueSafe.cpp  queueSafe.h  queueSafe.inl.h  runnable.h  threadPool.cpp  threadPool.h  threadTask.h
server/code/utils/: dataBuffer.cpp  dataProvider.cpp  dateTime.cpp  eventListener.h  eventProvider.cpp  eventProvider.h  fileStorageReader.cpp  htmlWrapper.cpp  logger.cpp  logger.h  programArgumentsParser.cpp  programArgumentsParser.h  programBreakEventProvider.cpp  programBreakEventProvider.h  singleton.h  singletonContainer.cpp  singletonContainer.h
server/examples/: ftpOverHttpServer.cpp
server/include/: command.h  commandProcessor.h  httpCommandProcessorInterface.h  httpServer.h  httpThings.h  httpWorkerRunnables.h  server.h
server/include/ftp_over_http/: ftpCommand.h  ftpCommandProcessor.h
server/include/socket/: socket.h  socketFunctions.h  socketTypes.h
server/sockets/: CMakeLists.txt  sockets.h  sockets_unix.h
server/src/: HttpWorkerRunnables.cpp  buffer.cpp  commandProcessor.cpp  dataBuffer.cpp  dataProvider.cpp  dateTime.cpp  eventProvider.cpp  fileStorageReader.cpp  ftpCommand.cpp  ftpCommandProcessor.cpp  htmlWrapper.cpp  httpServer.cpp  httpThings.cpp  logger.cpp  main.cpp  programArgumentsParser.cpp  programBreakEventProvider.cpp  queueSafe.cpp  runnable.cpp  server.cpp  singletonContainer.cpp  socket.cpp  socketFunctions.cpp  socketTypes.cpp  threadPool.cpp
(+22 files in other folders)
